# d3editmod

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LoadLevel.cpp  ai.cpp  ambient.cpp  attach.cpp  bnode.cpp  d3.cpp  damage.cpp  demo.cpp  demofile.cpp  door.cpp  doorway.cpp  draw.cpp  emlog.patch  fireball.cpp  game.cpp  gamedata.cpp  gamedata.h  gamedll.cpp  gameevent.cpp  gamefont.cpp  globals.cpp  hud.cpp  inventory.cpp  levelgoal.cpp  makefile  manage.cpp  matcen.cpp  msafe.cpp  multi.cpp  object.cpp  object_lighting.cpp  osiris.cpp  osiris_timer.cpp  pagein.cpp  player.cpp  polymodel.cpp  postrender.cpp  (+10 more)
2dlib/: 2dlib.vcxproj  font.cpp  hardsurf.cpp  lib2d.h  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
3d/: 3d.vcxproj  CLIPPER.cpp  Clipper.h  DRAW.cpp  GLOBVARS.cpp  Globvars.h  INSTANCE.cpp  MATRIX.cpp  POINTS.cpp  SETUP.cpp
NewEditor/: CameraSlew.cpp  ChildFrm.h  ChildView.h  DoorwayDialogBar.cpp  EditLineDialog.cpp  FileNewDialog.cpp  GoalDialog.cpp  GrListBox.cpp  LatheDialog.cpp  LatheDialog.h  LevelFrame.cpp  LevelInfoDialog.cpp  LightingProgress.h  MainFrm.cpp  MatcenDialog.cpp  MissionHogConfigDlg.cpp  NewEditor.cpp  NewEditor.vcxproj  ObjectDialogBar.cpp  ObjectDialogBar.h  ObjectPalette.cpp  PathDialogBar.cpp  PathDialogBar.h  ProgressDialog.cpp  RefFrameDialog.cpp  RoomDialogBar.h  RoomFrm.h  RoomProperties.cpp  RoomProperties.h  ScriptCompiler.cpp  SplashScreen.h  TablefileManager.cpp  TerrainDialogBar.cpp  TerrainDialogBar.h  TextureDialogBar.cpp  TextureDialogBar.h  TexturePalette.cpp  TexturePalette.h  editor_lighting.cpp  editor_object_lighting.cpp  (+22 more)
bitmap/: bitmain.cpp  bitmap.vcxproj  bumpmap.cpp  iff.cpp  iff.h  lightmap.cpp  pcx.cpp  tga.cpp
cfile/: CFILE.cpp  InfFile.cpp  cfile.vcxproj  hog.cpp
ddgr_win32/: ddgrWin32.h  ddgrWin32API.cpp  ddgrWin32DX.cpp  ddgrWin32DX.h  ddgrWin32GDI.cpp  ddgrWin32GDI.h  ddgrWin32Init.cpp  ddgr_win32.vcxproj
ddio_common/: ddio.cpp  ddio_common.vcxproj  key.cpp
ddio_win/: ddio_win.h  ddio_win.vcxproj  nokey.cpp  winfile.cpp  winforcefeedback.cpp  winio.cpp  winkey.cpp  winmouse.cpp  wintimer.cpp
ddvid_win32/: ddvid_win32.vcxproj  ddvidlib.h  vidWin32FS.cpp  vidWin32Win.cpp  video_win32.cpp
dllload/: .gitignore  dll.cpp  dll.h  dminwindef.h  dntimage.h  makefile  nodll.cpp  ntimage.h  osiris_common.h  osiris_import.h  readme.txt  winnt.h
editor/: DallasImportDlg.h  DallasSoundDlg.cpp  DallasSoundDlg.h  DallasStrmAudioDlg.h  DallasVectorPromptDialog.cpp  Erooms.cpp  RoomListCombo.h  SelManager.cpp  SelManager.h  SoundListCombo.h  TriggerListCombo.h  d3edit.h  dallasutilities.h  ebnode.cpp  edoors.h  hemicube.h  ned.sln  scriptcompilerapi.h  selectedroom.cpp  selectedroom.h
fix/: fix.cpp  fix.vcxproj
grtext/: grfont.cpp  grfont.h  grtext.cpp
lib/: 3d.h  AIGame3_External.h  AppDatabase.h  CFILE.H  DDAccess.h  Ddgr.h  InfFile.h  TaskSystem.h  aiambient.h  aimain.h  aistruct.h  aistruct_external.h  ambient.h  application.h  args.h  attach.h  bitmap.h  bnode.h  boa.h  bsp.h  buildno.h  bumpmap.h  byteswap.h  cockpit.h  collide.h  config.h  d3x_op.h  damage.h  damage_external.h  ddio.h  ddio_common.h  ddvid.h  deathinfo.h  (+120 more)
(+267 files in other folders)
